# tircorder-JOBBIE

./: .gitignore  2-j_servski-11-05-24.py  2024-05-11_15-17-02.json  2024-05-11_15-17-02.srt  2024-05-11_15-17-02.tsv  2024-05-11_15-17-02.txt  2024-05-11_15-17-02.vtt  AGENTS.md  Cargo.toml  Makefile  ONBOARDING.md  Outline.md  README.md  UPDATES.md  Updates.md  accessibility.md  calendar_utils.py  check_db_integrity.py  contact_frequency_cache.py  converter.py  cpu_monitor.py  create_db.py  db_worker.py  flake.nix  folder_walk_json.py  hourly_cache.py  init.py  j_servski-11-05-24-10.py  j_servski-11-05-24-2.py  j_servski-11-05-24-3.py  j_servski-11-05-24-4.py  j_servski-11-05-24-5.py  j_servski-11-05-24-6.py  j_servski-11-05-24-7.py  j_servski-11-05-24-8.py  j_servski-11-05-24-9.py  j_servski-11-05-24.py  jobbie_client_dual-capture.py  jobbie_gpt_05-10-2024.py  jobbie_gpt_CLIENT_05-10-2024.py  (+24 more)
Pelican/: ____webgen.py  __init__.py  _pelican.py  calendar.js  custom.css  custom.js  delete_symlinks.py  dir_traversal.py  folders_file.json  generate_content.py  generate_html.py  generate_html_activity.py  generate_html_canvas.py  generate_html_content.py  generate_html_dangling_audio.py  generate_html_dangling_item.py  generate_html_dangling_transcripts.py  generate_html_facebook.py  generate_html_footer.py  generate_html_header.py  generate_html_matches.py  generate_html_timeline_item.py  generate_symlinks.py  match_audio_transcript.py  match_files.py  old_match_audio_transcript.py  pelicanconf.py  process_audio_files.py  process_transcript_files.py  read_file_with_fallback.py  (+6 more)
(+200 files in other folders)
