[package]
name = "tircorder-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
ffmpeg-cli = "0.1"
log = "0.4"
env_logger = "0.10"
ctrlc = "3"
rusqlite = { version = "0.30", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
hound = "3"
# Use Bevy's ECS and application utilities for testing
bevy_app = { version = "0.13", default-features = false }
bevy_ecs = { version = "0.13", default-features = false }
assert_cmd = "2"

