[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tircorder"
version = "0.1.0"
description = "TiRCorder tools and utilities"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = [
    "Pelican*",
    "integrations*",
    "visualisation*",
    "tircorder*",
    "tircorder_utils*",
]

[tool.setuptools]
py-modules = ["hourly_cache", "transaction_analysis"]
